----------------------------------
Version 1.2.1
(unreleased)
----------------------------------
- Added 3D armor models for the jetpacks. Many thanks to Cybercat and dand0 for providing a model. (There is a config option to switch back to the boring old flat jetpacks.)
- Emergency hover mode can be toggled by switching hover mode while sneaking
- Sneaking while flying slows down sideways flight to half speed
- Fixed engine/hover controls not working when bound to mouse buttons



----------------------------------
Version 1.2.0
2014-10-18
----------------------------------
- Added full EnderIO support! This includes EnderIO versions of the jetpacks, flux packs and components.
- Integration with TE or EIO can be disabled/enabled in the config
- Changed the structure of the config... again. Mainly the tuning portions of it, make sure to transfer over any edits you did to them if needed.
- HUD now hides if F3 debug mode is enabled
- Code refactors and cleanups
- Note: the item IDs of Creative Jetpack/Flux Packs, Tuberous Jetpacks and Armor Platings have changed. Shouldn't cause any problems, they will just disappear or change into missing textures which you can just delete.



----------------------------------
Version 1.1.4
2014-10-02
----------------------------------
- Removed potentially infinite loop when upgrading jetpacks
- Fixed Leadstone Jetpack recipe not taking power from used Leadstone Flux Capacitors
- Recipes that use glass blocks now use Ore Dictionary glass



----------------------------------
Version 1.1.3
2014-09-25
----------------------------------
- Fixed the Flux-Infused JetPlate not being craftable with a (partially) charged Flux-Infused Chestplate



----------------------------------
Version 1.1.2
2014-09-24
----------------------------------
- Fixed spamming isue in the client console



----------------------------------
Version 1.1.1
2014-09-14
----------------------------------